fix section-1 align

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -46,7 +46,13 @@
     height: 80vh;
   }
 
+  .box {
+    text-align: center;
+  }
 
+  .box a {
+    margin: auto;
+  }
 
   .box:nth-child(6) {
     height: 80vh;
